refactor: code review